# LoveLingo-backend

./: .pre-commit-config.yaml  .python-version  README.md  pyproject.toml  requirements.txt
app/: __init__.py  models.py
app/repositories/: lovelingo.py
app/services/: lovelingo.py
app/views/: README.md  __init__.py  lovelingo.py  main.py
dev/: run-server.sh  show-tree.sh
docs/: 01. 개발환경 세팅하기.md  02. API 연습 및 run-server 스크립트 만들기.md  02. API 연습 및 단축 스크립트 만들기.md
prod/: run-server.sh
tests/: conftest.py
tests/views/: test_lovelingo.py
